fix display overflow

--- a/src/styles/display.css
+++ b/src/styles/display.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
+.display {
+  max-width: 380px;
+}
+
 .display * {
   color: white;
   display: flex;
